# LogVista-Cloud-Based-Log-Analytics-Monitoring-Platform

./: README.md  pyproject.toml
backend/alerts/: rules.py
backend/api/: main.py
backend/authentication/: security.py
backend/ingestion/: rate_limit.py
backend/processing/: engine.py
backend/services/: models.py  queue.py  realtime.py  storage.py
docs/: architecture.md
frontend/: README.md
infrastructure/docker/: docker-compose.yml
infrastructure/kubernetes/: api-deployment.yaml
tests/: test_api.py
workers/: README.md
